--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Авторизация"
+            android:text="Authorization"
             android:textColor="@android:color/black"
             android:textSize="28sp" />
 
@@ -41,7 +41,7 @@
                 android:id="@+id/input_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Логин"
+                android:hint="Email"
                 android:inputType="text"
                 android:maxLines="1" />
 
@@ -59,7 +59,7 @@
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Пароль"
+                android:hint="Password"
                 android:inputType="textPassword"
                 android:maxLines="1" />
 
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Запомнить пароль" />
+            android:text="Remember password" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/login_button"
@@ -77,7 +77,7 @@
             android:layout_height="64dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/button"
-            android:text="Вход"
+            android:text="Login"
             app:backgroundTint="@null" />
 
         <TextView
